--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,4 +17,4 @@ jobs:
         run: npm publish --access public
         working-directory: .
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+          NODE_AUTH_TOKEN: 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
