--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "testing",
-  "version": "0.0.1",
+  "name": "testingssssssssssssss",
+  "version": "0.0.2",
   "description": "Only test add npm package",
   "author": "Art",
   "license": "MIT",
