--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "testingiconpack56929",
+  "name": "cnfmvjgnbjgvnfdjkvnfbfgjkvndklcndfo",
   "version": "0.0.1",
   "description": "Only test add npm package",
   "author": "Art",
