--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,7 +12,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 18
+      - name: login to npm
+        run: npm login --registry=https://registry.npmjs.org/
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
       - name: publish
         run: npm publish --access public
         env:
-          NODE_AUTH_TOKEN: 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
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
